--- a/Research/FindingBestAlgorithm(BF).ipynb
+++ b/Research/FindingBestAlgorithm(BF).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1rxKzOYQ3tb9nbGKuW_u84EYjTSR_zZvV",
-      "authorship_tag": "ABX9TyOZJrAY1yLabLNinOm2K5nJ",
+      "authorship_tag": "ABX9TyNcH6gm5vvJWDxiiIylHeF8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,14 +24,16 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/elineelorm/Capstone_ADLA_StoveOvenUse/blob/research/FindingBestAlgorithm(BF).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/elineelorm/Capstone_ADLA_StoveOvenUse/blob/research/Research/FindingBestAlgorithm(BF).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "**Binary Classification** <br>\n",
-        "Machine learning code using Logistic Regression and Decision Trees and deciding which is best for the classification."
+        "Machine learning code using Logistic Regression and Decision Trees and deciding which is best for the classification.\n",
+        "\n",
+        "Author: Eline-Elorm Nuviadenu"
       ],
       "metadata": {
         "id": "4hOsCiukVJlI"
@@ -39,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "m4laiuwlVDPv"
       },
@@ -47,10 +49,7 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt \n",
-        "import pandas as pd\n",
-        "# from sklearn.datasets import load_breast_cancer\n",
-        "\n",
-        "# dataset = load_breast_cancer(as_frame=True)"
+        "import pandas as pd"
       ]
     },
     {
@@ -76,7 +75,7 @@
         "id": "UP2P85K8vCno",
         "outputId": "93fb3ed1-d306-400f-8b52-836cd4e435c4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +104,7 @@
         "id": "eEqR-IK6vpa9",
         "outputId": "24c396f1-4906-43b0-b482-1e4ebc8a0ea3"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +170,7 @@
         },
         "outputId": "a51ff43a-8e01-411f-ef22-da961dd23ff3"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +241,7 @@
       "metadata": {
         "id": "nu86JxQLXDkv"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +267,7 @@
       "metadata": {
         "id": "M1veYeH0XqfP"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -321,7 +320,7 @@
         "id": "GHsniQ5cZmMz",
         "outputId": "04c12c02-c433-46ea-c986-25a4db7ba9e6"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
